All release notes for spotx-mobile-ios

--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -31,7 +31,13 @@
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Display a colored arrow for infinite change, instead of <b>---</b>.</li>
+                        <li>Display millions or billions in graph labels.</li>
+                        <li>Show details for <b>"All Campaigns"</b>.</li>
+                        <li>Show details for <b>"All Channels"</b>.</li>
+                        <li>Don't colorize percent changes for error stats.</li>
+                        <li>Use api.spotxchange.com instead of publisher-api.spotxchange.com.</li>
+                        <li>Support <b>Danish Krone</b>.</li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +49,17 @@
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Make Deal ID copy-able with long press.</li>
+                        <li>Add SOK and NOK to the currency list.</li>
+                        <li>FaceID support.</li>
+                        <li>Make campaigns searchable by ID.</li>
+                        <li>Added currency select support.</li>
+                        <li>Mark time as GMT.</li>
+                        <li>Show Deal ID in campaign screen.</li>
+                        <li>Logging out now wipes all touch/face id data, except username.</li>
+                        <li>Move localAuth from LoginViewController to be a static variable on AppContext so we only ever have one.</li>
+                        <li>Also take out an extra "userLogout" function from the ApiClient, as we already have "logout".</li>
+                        <li>Escapes search queries to prevent regex from exploding on special characters like '\' and '*'.</li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +71,7 @@
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Version 2.0 redesign of Mobile Reporting App for iOS.</li>
                     </ul>
                 </div>
             </div>
