All release notes for spotx-mobile-android

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -31,7 +31,13 @@
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
                     <ul>
-                        <li>TODO</li>
+                        <li>Don't display infinite change.</li>
+                        <li>Display millions or billions in graph labels.</li>
+                        <li>Show details for <b>"All Campaigns"</b>.</li>
+                        <li>Show details for <b>"All Channels"</b>.</li>
+                        <li>Don't colorize percent changes for error stats.</li>
+                        <li>Use api.spotxchange.com instead of publisher-api.spotxchange.com.</li>
+                        <li>Support <b>Danish Krone</b>.</li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +49,7 @@
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
                     <ul>
-                        <li>Initial relase of SpotX Mobile for Android</li>
+                        <li>Initial relase of SpotX Mobile for Android.</li>
                     </ul>
                 </div>
             </div>
