--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
                     <ul>
-                        <li>Use HTTPS in controller requests</li>
+                        <li>Use HTTPS in controller requests.</li>
                     </ul>
                 </div>
             </div>
