--- a/website/spotx-sdk-avplayer/index.html
+++ b/website/spotx-sdk-avplayer/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
-                        <li>VMAP Feature Release</li>
+                        <li>VMAP Feature Release.</li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
-                        <li>Fix for full bitcode support</li>
+                        <li>Fix for full bitcode support.</li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
-                        <li>Fixes long standing bug with duration calculation</li>
+                        <li>Fixes long standing bug with duration calculation.</li>
                     </ul>
                 </div>
             </div>
@@ -79,11 +79,11 @@
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
-                        <li>Add podding support to tvOS AVPlayer SDK</li>
-                        <li>Update internal sdk test app to work with podding</li>
-                        <li>Fix tvOS unit tests after podding implementation</li>
-                        <li>SPXFuture will no longer take nil values or errors</li>
-                        <li>Update `Jenkinsfile` to allocate ‘Xcode’ CI node</li>
+                        <li>Add podding support to tvOS AVPlayer SDK.</li>
+                        <li>Update internal sdk test app to work with podding.</li>
+                        <li>Fix tvOS unit tests after podding implementation.</li>
+                        <li>SPXFuture will no longer take nil values or errors.</li>
+                        <li>Update `Jenkinsfile` to allocate ‘Xcode’ CI node.</li>
                     </ul>
                 </div>
             </div>
@@ -95,20 +95,20 @@
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
                     <ul>
-                        <li>Support for VPI=tvjs</li>
-                        <li>Added <b>-Weverything</b> to SDK build settings</li>
-                        <li>Fixed a few resulting compiler warnings</li>
-                        <li>TODO: extract specific <b>-W</b> settings into <b>.xcconfig</b></li>
-                        <li>Put <b>UIViewController</b> code into common folder</li>
-                        <li>Create platform-specific storyboards</li>
-                        <li>VAST 2/3 parser based on the existing Android SDK code</li>
-                        <li>Unit tests using existing test data and test data from Android SDK</li>
-                        <li>Resolves VAST Wrapper ads</li>
+                        <li>Support for VPI=tvjs.</li>
+                        <li>Added <b>-Weverything</b> to SDK build settings.</li>
+                        <li>Fixed a few resulting compiler warnings.</li>
+                        <li>TODO: extract specific <b>-W</b> settings into <b>.xcconfig</b>.</li>
+                        <li>Put <b>UIViewController</b> code into common folder.</li>
+                        <li>Create platform-specific storyboards.</li>
+                        <li>VAST 2/3 parser based on the existing Android SDK code.</li>
+                        <li>Unit tests using existing test data and test data from Android SDK.</li>
+                        <li>Resolves VAST Wrapper ads.</li>
                         <li>Update iOS Test App to have live resizing.</li>
                         <li>Created XML DOM parser to for parsing VAST documents.</li>
                         <li>Update <b>Makefile</b> to build and test tvOS and iOS targets.</li>
-                        <li>Add support for iOS 8.0+</li>
-                        <li>Added spotx-tvml extensions doc</li>
+                        <li>Add support for iOS 8.0+.</li>
+                        <li>Added spotx-tvml extensions doc.</li>
                     </ul>
                 </div>
             </div>
