--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -71,8 +71,7 @@
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
                     <ul>
-                        <li>Fixes an issue where ad playback was delayed approximately 5 seconds when location permissions were not granted to the SDK by the app.
-.</li>
+                        <li>Fixes an issue where ad playback was delayed approximately 5 seconds when location permissions were not granted to the SDK by the app.</li>
                     </ul>
                 </div>
             </div>
