--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
                     <ul>
-                        <li>Include config folder in RPM</li>
+                        <li>Include config folder in RPM.</li>
                         <li>Added SDK v4 url and feature toggle settings endpoint.</li>
                     </ul>
                 </div>
@@ -94,9 +94,9 @@
                 <div class="box_left_versionString package_description redborderlight">
                     <ul>
                         <li>RPM packaging via Vagrant</li>
-                        <li>Remove <b>ln/ln_s</b> because they fail on Centos 6</li>
-                        <li>Manually untar the packaged sources in the rpmspec, Centos 6 does not handle file paths to source archives</li>
-                        <li>Update Jenkinsfile to use Vagrant for building rpm</li>
+                        <li>Remove <b>ln/ln_s</b> because they fail on Centos 6.</li>
+                        <li>Manually untar the packaged sources in the rpmspec, Centos 6 does not handle file paths to source archives.</li>
+                        <li>Update Jenkinsfile to use Vagrant for building rpm.</li>
                     </ul>
                 </div>
             </div>
@@ -108,8 +108,8 @@
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
                     <ul>
-                        <li>Add <b>/usr/local/bin</b> to PATH</li>
-                        <li>Force login shell</li>
+                        <li>Add <b>/usr/local/bin</b> to PATH.</li>
+                        <li>Force login shell.</li>
                     </ul>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
                     <ul>
-                        <li>Use long commit hash for RPM</li>
+                        <li>Use long commit hash for RPM.</li>
                         <li>Display current commit hash in RPM description (Defaults to ENV['GIT_HASH'] to work with git-build).</li>
                         <li>Install nosdk-assets RPM to local filesystem rather than NFS mount.</li>
                         <li>Fail if <b>/images</b> is not an NFS mount.</li>
