Add spotx-mobile-notifications product

--- a/website/index.html
+++ b/website/index.html
@@ -201,6 +201,23 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <div class="box_left indigo indigobackgroundlight">
+                <div class="box_left_titlebar indigobackground">
+                    <a href="spotx-mobile-notifications/index.html">spotx-mobile-notifications</a>
+                </div>
+                <div class="box_left_versionString indigobackgroundlight">alpha</div>
+            </div>
+            <div class="box_right indigo indigobackgroundlight bold">
+                <div class="box_right_titlebar indigobackground">
+                    <a href="spotx-mobile-notifications/index.html">spotx-mobile-notifications</a>
+                </div>
+                <div class="box_right_versionString indigobackgroundlight">
+                    beta
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
