Fix typos in spotx-mobile-notifications

--- a/website/spotx-mobile-notifications/index.html
+++ b/website/spotx-mobile-notifications/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ninja | spotx-mobile-notifications</title>
-    <meta name="description" content="Release log for spotx-mobile-android.">
+    <meta name="description" content="Release log for spotx-mobile-notifications.">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Dosis" rel="stylesheet">
     <link rel="stylesheet" href="../ninja.css">
 </head>
@@ -25,7 +25,7 @@
 
         <div class="rowdiv">
             <div class="box_full indigo indigobackgroundlight bold">
-                <div class="box_left_titlebar indigobackground">spotx-mobile-android</div>
+                <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
                     beta
                 </div>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="box_full indigo indigobackgroundlight">
-                <div class="box_left_titlebar indigobackground">spotx-mobile-android</div>
+                <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
                     alpha
                 </div>
