Add README descriptions for all projects

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -27,6 +27,17 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description blueborderlight">
+                    <p><i>SpotX's mobile reporting app for Android.</i></p>
+                    <p><i>Think of it as pubtools in an app. Use it to view revenue and impressions for publishers, and drill down to specific channels and campaigns for advanced metrics.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full blue bluebackgroundlight bold">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString">
                     1.0.1
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
