--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -27,6 +27,17 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <p><i>SpotX's mobile reporting app for iOS.</i></p>
+                    <p><i>Think of it as pubtools in an app. Use it to view revenue and impressions for publishers, and drill down to specific channels and campaigns for advanced metrics.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight bold">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     2.1.1
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
