--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -27,6 +27,17 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <p><i>SpotX's nosdk-controller is the js runtime used by SDK4 (iOS and Android).</i></p>
+                    <p><i>This javascript SDK controller lives on the CDN and can be updated at any time, making it easy to fix or add publisher features without requiring publishers to update their client SDK binary.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight bold">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.1.2
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
