--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -27,6 +27,17 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <p><i>SpotX's SDK for Android.</i></p>
+                    <p><i>Have an Android app? Want to monetize it with ads? Then look no further than SpotX's Android SDK.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight bold">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.3.1
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
