--- a/website/spotx-sdk-avplayer/index.html
+++ b/website/spotx-sdk-avplayer/index.html
@@ -27,6 +27,17 @@
             <div class="box_full bluegreen bluegreenbackgroundlight bold">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description bluegreenborderlight">
+                    <p><i>SpotX's SDK for AppleTV.</i></p>
+                    <p><i>The AVPlayer SDK allows AppleTV publishers to monetize their apps with pre/mid/postroll placements. Podding and VMAP integrations are supported.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full bluegreen bluegreenbackgroundlight bold">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_versionString">
                     1.6.0
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
