--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -27,6 +27,17 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <p><i>SpotX's SDK for iOS.</i></p>
+                    <p><i>Have an iOS app? Want to monetize it with ads? Then look no further than SpotX's iOS SDK.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.2.0
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
