--- a/website/spotx-web-nosdk/index.html
+++ b/website/spotx-web-nosdk/index.html
@@ -27,6 +27,17 @@
             <div class="box_full red redbackgroundlight bold">
                 <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description redborderlight">
+                    <p><i>SpotX's SDK settings endpoint.</i></p>
+                    <p><i>The purpose of web-nosdk is to serve a JSON blob that contains settings for SDK4. If passed a valid apikey, the settings endpoint returns custom settings corresponding to the apikey. If no apikey is passed, or the passed key is invalid, the settings endpoint returns a set of default settings.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full red redbackgroundlight bold">
+                <div class="box_left_titlebar redbackground">spotx-web-nosdk</div>
+                <div class="box_left_versionString">
                     2.0.3
                 </div>
                 <div class="box_left_versionString package_description redborderlight">
