--- a/website/spotx-mobile-notifications/index.html
+++ b/website/spotx-mobile-notifications/index.html
@@ -27,6 +27,17 @@
             <div class="box_full indigo indigobackgroundlight bold">
                 <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
                 <div class="box_left_versionString">
+                    README
+                </div>
+                <div class="box_left_versionString package_description indigoborderlight">
+                    <p><i>SpotX's notifications server.</i></p>
+                    <p><i>This product can send notifications to any platform. Mobile app. Cell number. Email. Whatever the platform, this product is the sender. The notifications server also keeps track of user notification settings, such as which notifications are enabled/disabled.</i></p>
+                </div>
+            </div>
+
+            <div class="box_full indigo indigobackgroundlight bold">
+                <div class="box_left_titlebar indigobackground">spotx-mobile-notifications</div>
+                <div class="box_left_versionString">
                     beta
                 </div>
                 <div class="box_left_versionString package_description indigoborderlight">
