spotx-sdk-avplayer release 1.6.1

--- a/website/spotx-sdk-avplayer/index.html
+++ b/website/spotx-sdk-avplayer/index.html
@@ -40,6 +40,18 @@
             <div class="box_full bluegreen bluegreenbackgroundlight bold">
                 <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
                 <div class="box_left_versionString">
+                    1.6.1
+                </div>
+                <div class="box_left_versionString package_description bluegreenborderlight">
+                    <ul>
+                        <li>Fix cocoapods warnings.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full bluegreen bluegreenbackgroundlight">
+                <div class="box_left_titlebar bluegreenbackground">spotx-sdk-avplayer</div>
+                <div class="box_left_versionString">
                     1.6.0
                 </div>
                 <div class="box_left_versionString package_description bluegreenborderlight">
