Update spotx-sdk-ios 4.2.0 release notes

--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -45,6 +45,10 @@
                 <div class="box_left_versionString package_description yellowborderlight">
                     <ul>
                         <li>Added GMA SDK Adapter.</li>
+                        <li>Auto populate <b>player_width</b> and <b>player_height</b>.</li>
+                        <li>Improve interstitial video experience on iPhoneX.</li>
+                        <li>Remove unused <b>tvjs</b> parameter from Spotmarket request.</li>
+                        <li>Standardize <b>apikey-default</b> as default apikey in demoapps.</li>
                     </ul>
                 </div>
             </div>
