player_width and player_height on Android

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -58,6 +58,7 @@
                 <div class="box_left_versionString package_description peachborderlight">
                     <ul>
                         <li>Added GMA SDK Adapter.</li>
+                        <li>Auto populate <b>player_width</b> and <b>player_height</b>.</li>
                     </ul>
                 </div>
             </div>
