spotx-sdk-android release 3.4.1

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -134,6 +134,19 @@
             <div class="box_full peach peachbackgroundlight">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    3.4.1
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>Final release of SDK3 for Dish</li>
+                        <li>Released 16 Dec 2018</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     3.4.0
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
